<resources>
    <string name="app_name">Cognitus</string>
    <string name="app_usuario">Usuario</string>
    <string name="app_contraseña">Contraseña</string>
    <string name="app_sesion">Iniciar Sesión</string>
    <string name="app_iniciar">Iniciar</string>>
    <string name="menu_noticias">Noticias</string>>
    <string name="menu_producto">Productos</string>>
    <string name="menu_acercaDe">Acerca de</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_sesion">Cerrar Sesión</string>
    <string name="txt_titulonews">Noticias </string>
    <string name="txt_tituloNoticias">Noticias </string>
    <string name="txt_tituloAcercaDe">Acerca De</string>
    <string name="txt_tituloProductos">Productos </string>
    <string name="titulo_compartir">Compartir mediante</string>
    <string name="msj_compartir">Me gustaria que vieras esto.</string>
    <string name="app_correo">Correo</string>
    <string name="app_mensaje">Mensaje</string>
    <string name="app_aceptar">Aceptar</string>
    <string name="app_cancela">Cancela</string>

    <string name="ws_url_login">http://35.155.161.8:8080/WSExample/DataWS?ApiCall=</string>
    <string name="ws_url_contacto">http://35.155.161.8:8080/WSExample/DataWS?ApiCall=</string>
    <string name="ws_url_acercaDe">http://35.155.161.8:8080/WSExample/DataWS?ApiCall=getNosotros</string>
    <string name="ws_url">http://35.155.161.8:8080/WSExample/DataWS?ApiCall=getNews</string>
    <string name="ws_url_producto">http://35.155.161.8:8080/WSExample/DataWS?ApiCall=getProductos</string>
    <string name="ws_url_productoId">http://35.155.161.8:8080/WSExample/DataWS?ApiCall=setProdOrder</string>
    <string name="img_url">http://35.155.161.8:8080/WSExample/</string>
</resources>
