<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ContactoActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginRight="30dp"
       android:layout_marginLeft="30dp"
       android:orientation="vertical"
       android:layout_marginTop="20dp">

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/app_usuario"
           android:background="@drawable/usuario1"
           android:textSize="16sp"
           android:padding="10dp"
           android:maxLength="30"
           android:paddingLeft="20dp"
           android:drawablePadding="5dp"
           android:drawableLeft="@drawable/usuario"/>


       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/app_correo"
           android:background="@drawable/usuario1"
           android:layout_marginTop="20dp"
           android:textSize="16sp"
           android:padding="10dp"
           android:maxLength="30"
           android:paddingLeft="20dp"
           android:drawablePadding="5dp"
           android:drawableLeft="@drawable/mensaje"/>

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/rectangulo_mensaje"
           android:hint="@string/app_mensaje"
           android:textSize="16sp"
           android:gravity="top"
           android:maxLength="400"
           android:layout_marginTop="20dp"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/iniciar"
           android:layout_marginTop="20dp"
           android:text="@string/app_iniciar"
           android:textColor="@color/colorLetrabotón"/>

   </LinearLayout>

</LinearLayout>