<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    tools:context=".activities.MenuActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnCierra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_sesion"
            android:textAllCaps="false"
            android:textColor="@color/colorLetrabotón"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/invalid_name"
            android:padding="10dp"
            android:drawablePadding="5dp"
            android:background="@drawable/rectangulo"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="55dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/LiNoticias"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/cuadro_1">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".70"
                    android:src="@drawable/periodico"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".30"
                    android:text="@string/menu_noticias"
                    android:layout_marginTop="3dp"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LiProducto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/cuadro_1">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".70"
                    android:src="@drawable/cajas"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".30"
                    android:text="@string/menu_producto"
                    android:layout_marginTop="3dp"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/LiAcercaDe"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/cuadro_1">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".70"
                    android:src="@drawable/acerca_de"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".30"
                    android:text="@string/menu_acercaDe"
                    android:layout_marginTop="3dp"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LiContacto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/cuadro_1">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".70"
                    android:src="@drawable/contacto"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight=".30"
                    android:text="@string/menu_contacto"
                    android:layout_marginTop="3dp"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tVUserParam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>